--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -44,14 +44,29 @@
           Profile
         </div>
 
-        <a class="item item-avatar" href="#">
-          <img src="">
-          <h2> Username: {{ home_ctrl.jwtUserName }}</h2>
-        </a>
+        <ul class="list">
+          <li>
+            <a class="item item-avatar" href="#">
+              <img src="">
+              <h2> Username: {{ home_ctrl.jwtUserName }}</h2>
+            </a>
+          </li>
+        </ul>
+
 
         <div class="item item-divider">
           Friends
         </div>
+
+        <ul class="list">
+
+          <li ng-repeat="friend in home_ctrl.friendList"> {{ friend.username }} </li>
+
+        {{ home_ctrl.friendList }}
+
+
+
+        </ul>
 
 
       </div>
