--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -58,20 +58,39 @@
                <!--           WSPOLNY WIDOK PRZYJACIOL          -->
 
 
-      <div class="item item-divider">
-        FRIENDS
+      <div class="item item-divider friendsDivider">
+        Friends
       </div>
+
+
 
         <form name="home_ctrl.userSearch" novalidate ng-submit="home_ctrl.inviteUser()">
 
-                <label class="item item-input">
-                  <input type="text" name="userField" placeholder="Search for a friend..." ng-model="userfield" friend-finder>
-                </label>
+          <ul class="list">
+            <li class="item">
+
+          <div class="row">
+            <div ng-class="{ 'col-100 userFieldDiv' : !loadingData, 'col-50' : loadingData }">
+
+                <input type="text" name="userField" placeholder="Search for a friend..." ng-model="userfield" friend-finder>
+
+            </div>
+
+            <div class="col" ng-show="loadingData">
+              <div class="userSearchInfo">
+                <i class="ion-information-circled"></i>
+                Searching...
+              </div>
+            </div>
+          </div>
+
+            </li>
+          </ul>
 
 
             <div class="userSearchInfo" ng-show="home_ctrl.userSearch.userField.$valid">
               <i class="ion-information-circled"></i>
-              Request success
+              Invite request sent
             </div>
 
             <div class="error" ng-show="userSearch.userField.$invalid">
@@ -81,36 +100,54 @@
 
 
 
-            <div class="card" ng-show="friendData">
-              <div class="item item-text-wrap">
-                {{ friendData.friendDetails.username }}
+            <ul class="list" ng-show="friendData" ng-hide="home_ctrl.inviteSent">
 
-                <button class="button button-small button-calm" ng-show="friendData.alreadyFriend">
-                  Already a Friend
-                </button>
-                <button type="submit" class="button button-small button-balanced" ng-show="friendData.friendExists && !friendData.alreadyFriend &&
-                 !home_ctrl.sendingInvite && !friendData.requestAlreadySent">
-                  <!-- ng-click="home_ctrl.inviteUser(friendData)" -->
-                  Invite
-
-                </button>
-
-                <span ng-show="home_ctrl.sendingInvite && !home_ctrl.inviteSent">Sending request...</span>
-
-                <span ng-hide="friendData.friendExists"> no users with that username found </span>
-
-                <button class="button button-small button-positive" ng-show="home_ctrl.inviteSent && !friendData.requestAlreadySent || friendData.requestAlreadySent">
-                  Request sent
-                </button>
+              <div class="item item-divider findingsDivider">
+                Results
               </div>
-            </div>
+
+              <li class="item">
+
+                <div class="row">
+
+                   <div class="col friendname" ng-show="friendData.friendDetails"> {{ friendData.friendDetails.username }} </div>
+
+
+                    <div class="col">
+
+                    <button class="button button-small button-calm" ng-show="friendData.alreadyFriend">
+                      Already a Friend
+                    </button>
+                    <button type="submit" class="button button-small button-clear button-balanced" ng-show="friendData.friendExists && !friendData.requestAlreadySent"
+                            ng-hide="home_ctrl.inviteSent">
+                      <!-- ng-click="home_ctrl.inviteUser(friendData)" -->
+                      Invite
+
+                    </button>
+
+                    <span ng-show="home_ctrl.sendingInvite && !home_ctrl.inviteSent">Sending request...</span>
+
+                    <span ng-hide="friendData.friendExists"> no users with that username found </span>
+
+                    <span class="button button-clear button-positive" ng-show="friendData.requestAlreadySent">
+                      Request already sent
+                    </span>
+
+                    </div>
+
+                </div>
+
+              </li>
+            </ul>
 
         </form>
+
+
 
         <div class="list">
 
           <div class="item item-divider" ng-show="home_ctrl.receivedInvites">
-            Requests
+            Friend requests
           </div>
 
           <div ng-repeat="friendRequest in home_ctrl.receivedInvites">
@@ -121,7 +158,7 @@
                       {{ friendRequest.username }}
                   </div>
                   <div class="col col-offset-40">
-                      <button class="button button-small button-outline button-positive">
+                      <button class="button button-small button-outline button-positive" ng-click="home_ctrl.acceptInvite(friendRequest)">
                         Accept
                       </button>
                   </div>
@@ -133,7 +170,13 @@
           </div>
 
           <div class="item item-divider">
-            List
+            Friend list
+          </div>
+
+          <div ng-hide="home_ctrl.friendList">
+            <a class="item item-icon-left item-icon-right">
+              Friend list is empty
+            </a>
           </div>
 
           <div ng-repeat="friend in home_ctrl.friendList">
@@ -142,7 +185,6 @@
               <i class="icon ion-chatbubble-working"></i>
               {{ friend.username }}
               <i class="icon ion-checkmark-round green-icon" ng-show="friend.userStatus"></i>
-
             </a>
 
           </div>
