--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,12 +1,5 @@
 <ion-side-menus>
 
-  <ion-side-menu-content>
-
-
-
-      <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
-
-  </ion-side-menu-content>
 
   <ion-side-menu side="left">
     <header class="bar bar-header bar-positive"></header>
@@ -18,8 +11,24 @@
              Home
             </ion-item>
 
+            <ion-item nav-clear menu-close ui-sref="app.friends.list">
+              Friends
+            </ion-item>
+
           </ion-list>
         </ion-content>
 
   </ion-side-menu>
+
+
+
+  <ion-side-menu-content>
+
+    <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
+
+  </ion-side-menu-content>
+
+
+
+
 </ion-side-menus>
