--- a/www/templates/friends.html
+++ b/www/templates/friends.html
@@ -1,6 +1,6 @@
 <ion-tabs class="tabs-positive tabs-icon-top">
 
-  <ion-tab title="Friend list" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline" ui-sref=".friends.list">
+  <ion-tab title="Friend list" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline" href="#/app/friends/list">
     <ion-nav-view name="friendlistContent"></ion-nav-view>
   </ion-tab>
 
@@ -8,7 +8,7 @@
     <ion-nav-view name="requestsContent"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Settings" icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline" href="#/app/friends/search">
+  <ion-tab title="Search..." icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline" href="#/app/friends/search">
     <ion-nav-view name="searchContent"></ion-nav-view>
   </ion-tab>
 
