--- a/www/modules/auth/templates/errorlist.html
+++ b/www/modules/auth/templates/errorlist.html
@@ -6,11 +6,11 @@
 
   <div class="error" ng-message="minlength">
     <i class="ion-information-circled"></i>
-    Minimum length of this field is 2 characters
+    Minimum length of this field is 5 characters
   </div>
   <div class="error" ng-message="maxlength">
     <i class="ion-information-circled"></i>
-    Maximum length of this field is 20 characters
+    Maximum length of this field is 15 characters
   </div>
 
   <div class="info" ng-message="recordLoading">
@@ -27,4 +27,14 @@
   <div class="error" ng-message="checkIfMatch">
     <i class="ion-information-circled"></i>
     Password doesn't match or it's too short. Please verify your input.
+  </div>
+
+  <div class="error" ng-message="wrongUsername">
+    <i class="ion-information-circled"></i>
+    Invalid username
+  </div>
+
+  <div class="error" ng-message="correctPassword">
+    <i class="ion-information-circled"></i>
+    Incorrect password
   </div>
