--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,6 +15,10 @@
               Friends
             </ion-item>
 
+            <ion-item nav-clear menu-close ui-sref="app.chat">
+              Chat
+            </ion-item>
+
           </ion-list>
         </ion-content>
 
