--- a/www/templates/chat.html
+++ b/www/templates/chat.html
@@ -9,7 +9,7 @@
 </style>
 
 
-<ion-view ng-controller="FriendController as friend_ctrl" ng-init="friend_ctrl.getUserInfo()">
+<ion-view ng-controller="ChatController as chat_ctrl">
 
   <ion-nav-bar class="bar-positive nav-title-slide-ios7">
     <ion-nav-title>
@@ -25,10 +25,34 @@
 
       <ion-content class="has-header padding has-tabs">
 
-        <ul id="messages"></ul>
-        <form action="">
-          <input id="m" autocomplete="off" /><button>Send</button>
-        </form>
+        You are known as: <span ng-bind="chat_ctrl.nickName"></span>.
+        <br/>
+        Change your nickname with <code>/nick [yourNewNick]</code>
+        <div class='row'>
+          <div class='col-md-9'>
+        <textarea style='width: 100%; height: 200px'
+                  ng-disable='true' ng-model='chat_ctrl.messageLog'></textarea>
+          </div>
+        </div>
+        <div class='row'>
+
+        </div>
+        <div class='row'>
+          <div class='col-md-8'>
+            <form role='form' novalidate name='form'>
+              <div class='form-group'>
+                <input type='text' style='width: 80%'
+                       required
+                       ng-max='50'
+                       ng-model='chat_ctrl.message'
+                       focus>
+                <button class='btn btn-sm btn-primary'
+                        ng-enable='form.$valid'
+                        ng-click="chat_ctrl.sendMessage(message)">Send!</button>
+              </div>
+            </form>
+          </div>
+        </div>
 
 
       </ion-content>
